# algo

./: README.md  main.cpp
findIsland/: CMakeLists.txt
findIsland/sources/: countIslands.cpp  countIslands.h  main.cpp
